--- a/CAPOL_WEB_UI/流程中心 - 副本.html
+++ b/CAPOL_WEB_UI/流程中心 - 副本.html
@@ -70,7 +70,7 @@
                 <li role="presentation" class="right"><a href="#" class="bordered">我发起的 [2]</a></li>
             </ul>
         </div>
-        <div class="nav nav-tree" style="width:240px;position: absolute;margin-left:20px;margin-top:10px;">
+        <div class="nav nav-tree" style="width:240px;position: absolute;margin-left:5px;margin-top:10px;">
             <ul>
                 <li><a href="#" class="lv1">通用<span class="glyphicon glyphicon-triangle-bottom triangle-bottom"></span></a>
                     <ul style="display: block;">
@@ -105,7 +105,7 @@
                 </li> 
             </ul>
         </div>
-        <div style="padding-left:280px;padding-right: 20px;">
+        <div style="padding-left:250px;padding-right: 5px;">
             <div style="height:33px;margin-top:10px;">
                 <ul class="nav nav-tabs" role="tablist" >
                     <li role="presentation" class="active" ><a class="sm" href="#">工程文件盖章</a></li>
@@ -272,7 +272,7 @@
                 </tbody>
             </table>
         </div> <!-- /container -->
-        <div class="form-window" id="window" style="display: none;">
+        <div class="form-window" id="window">
             <div class="form-window-title"> 
                 <h4>
                 <span class="title">工程文件盖章申请单</span>
@@ -293,12 +293,13 @@
                             <td class="bold" style="width:12%">设计阶段</td>       
                             <td style="width:16%" colspan="2">
                                 <div class="btn-group" style="width: 100%;">
-                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" style="width: 100%;height:29px;text-align:left;">施工图<span class="caret"></span></button>
+                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" style="width: 100%;height:29px;text-align:left;">竣工图<span class="caret"></span></button>
                                     <ul class="dropdown-menu">
                                         <li><a href="#">方案</a></li>
                                         <li><a href="#">初步设计</a></li>
                                         <li><a href="#">施工图</a></li>
                                         <li><a href="#">施工服务</a></li>
+                                        <li><a href="#">竣工图</a></li>
                                     </ul>
                                 </div></td>
                         </tr>
@@ -327,7 +328,7 @@
                         <tr>
                             <td style="width:24%" colspan="2"> 
                                 <div class="btn-group" style="width: 100%;">
-                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" style="width: 100%;height:29px;text-align:left;"><span class="caret"></span></button>
+                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" style="width: 100%;height:29px;text-align:left;">竣工验收报告<span class="caret"></span></button>
                                     <ul class="dropdown-menu">
                                         <li><a href="#">设计更改通知单</a></li>
                                         <li><a href="#">图纸会审记录<span class="caret caret-right"></span></a></li>
@@ -338,8 +339,8 @@
                                     </ul>
                                 </div>
                             </td>
-                            <td style="width:24%" colspan="2"><input class="form-control select" type="text" id="prjname" value=""></td>
-                            <td style="width:6%"></td>
+                            <td style="width:24%" colspan="2"><input class="form-control select" type="text" id="prjname" value="竣工验收报告"></td>
+                            <td style="width:6%">1</td>
                             <td style="width:6%">
                                 <div class="input-group spinner">  
                                     <input type="text" class="form-control" value="1">  
@@ -349,7 +350,7 @@
                                     </div>  
                                 </div> 
                             </td>
-                            <td style="width:24%" colspan="2"></td>
+                            <td style="width:24%;text-align: left;" colspan="2" >公章</td>
                             <td style="width:8%"><input type="checkbox" id="inlineCheckbox1" value="option1"></td>
                             <td style="width:8%"><input type="checkbox" id="inlineCheckbox1" value="option1"></td>
                         </tr>
@@ -420,7 +421,11 @@
                       <div class="nodes-inline"><div class="nodes-arrow"><span class="nodes-icon glyphicon glyphicon-arrow-right" aria-hidden="true"></span></div></div>
                       <div class="nodes-inline nodes-inline-node"><div class="nodes nodes-red"><span class="nodes-icon glyphicon glyphicon-remove" aria-hidden="true"></span></div><span class="node_name">部门运营总</span><span class="node_name person">张胜强</span></div>
                       <div class="nodes-inline"><div class="nodes-arrow"><span class="nodes-icon glyphicon glyphicon-arrow-right" aria-hidden="true"></span></div></div>
-                      <div class="nodes-inline nodes-inline-node"><div class="nodes nodes-gray"></div><span class="node_name">公司主管领导</span><span class="node_name person"></span></div>
+                      <div class="nodes-inline nodes-inline-node"><div class="nodes nodes-blue"></div><span class="node_name">运营部经理</span><span class="node_name person"></span></div>
+                      <div class="nodes-inline"><div class="nodes-arrow"><span class="nodes-icon glyphicon glyphicon-arrow-right" aria-hidden="true"></span></div></div>
+                      <div class="nodes-inline nodes-inline-node"><div class="nodes nodes-blue"></div><span class="node_name">运营总监</span><span class="node_name person"></span></div>
+                      <div class="nodes-inline"><div class="nodes-arrow"><span class="nodes-icon glyphicon glyphicon-arrow-right" aria-hidden="true"></span></div></div>
+                      <div class="nodes-inline nodes-inline-node"><div class="nodes nodes-blue"></div><span class="node_name">公司总经理</span><span class="node_name person"></span></div>
                       <div class="nodes-inline"><div class="nodes-arrow"><span class="nodes-icon glyphicon glyphicon-arrow-right" aria-hidden="true"></span></div></div>
                       <div class="nodes-inline nodes-inline-node"><div class="nodes nodes-gray"></div><span class="node_name">董事长</span><span class="node_name person"></span></div>
                       <div class="nodes-inline"><div class="nodes-arrow"><span class="nodes-icon glyphicon glyphicon-arrow-right" aria-hidden="true"></span></div></div>
