--- a/CAPOL_WEB_UI/工程管理平台-各设计阶段项目一览表.html
+++ b/CAPOL_WEB_UI/工程管理平台-各设计阶段项目一览表.html
@@ -110,7 +110,7 @@
             </ul>
         </div>
         <div style="padding-left:280px;padding-right: 20px;">
-            <div style="height:48px;">
+            <div style="height:48px;min-width:1250px;">
                 <div class="select-item">
                     <span>所属公司</span>
                     <select id="filter-company" class="combobox" style="width:150px;">
@@ -170,11 +170,11 @@
                     </label>
                 </div>
             </div>
-            <div class="table-title clearFix">各设计阶段项目一览表
+            <div class="table-title clearFix"  style="min-width:1250px;">各设计阶段项目一览表
                 <a class="btn btn-default btn-xs right-buttons" href="#" role="button"><span class="glyphicon glyphicon-floppy-save"></span> 下载</a>
                 <span style="position: relative;float: right;font-size: 12px;font-weight: normal;margin: 0px 5px;">日期：201-07-20</span>
             </div>
-            <table class="table table-bordered table-condensed dataTable no-footer">
+            <table class="table table-bordered table-condensed dataTable no-footer" style="min-width:1250px;">
                 <thead>
                     <tr style="text-align: right;">
                         <th style="width:80px">工程阶段</th>
