--- a/CAPOL_WEB_UI/工程管理平台-工程台账.html
+++ b/CAPOL_WEB_UI/工程管理平台-工程台账.html
@@ -72,16 +72,15 @@
             </ul>
         </div>
         
-        <div class="nav nav-tree" style="width:240px;position: absolute;margin-left:20px;margin-top:10px;">
+        <div class="nav nav-tree" style="width:200px;position: absolute;margin-left:20px;margin-top:10px;">
             <ul>
                 <li><a href="#" class="lv1">工程管理<span class="glyphicon glyphicon-triangle-bottom triangle-bottom"></span></a>
                     <ul style="display: block;">
                         <li><a href="#" class="active">工程台账</a></li>
-                        <li><a href="#">工程管理一览表</a></li>
-                        <li><a href="#">……</a></li>
+                        <li><a href="#">项目关键节点控制一览表</a></li>
                     </ul>
                 </li>
-                <li><a href="#" class="lv1">运营管理<span class="glyphicon glyphicon-triangle-bottom triangle-bottom"></span></a>
+                <li><a href="#" class="lv1">人员项目管理5张表<span class="glyphicon glyphicon-triangle-bottom triangle-bottom"></span></a>
                     <ul style="display: block;">
                         <li><a href="#">人员信息表</a></li>
                         <li><a href="#">人员架构表</a></li>
@@ -92,7 +91,7 @@
                 </li>
             </ul>
         </div>
-        <div style="padding-left:280px;padding-right: 20px;">
+        <div style="padding-left:240px;padding-right: 20px;">
             <div style="height:33px;margin-top:10px;">
                 <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation" class="active"><a class="sm" href="#">我关注的</a></li>
