--- a/CAPOL_WEB_UI/工程管理平台-项目人员表.html
+++ b/CAPOL_WEB_UI/工程管理平台-项目人员表.html
@@ -314,7 +314,7 @@
                     <tr>
                         <td rowspan="15">2</td>
                         <td rowspan="15">GC180171</td>
-                        <td rowspan="15">碧桂园广州白鹅潭项目</td>
+                        <td rowspan="15" style="text-align: left"><a href="#">碧桂园广州白鹅潭项目</a></td>
                         <td rowspan="15">深圳公司</td>
                         <td rowspan="15">公建部</td>
                         <td rowspan="15">投标</td>
@@ -461,7 +461,7 @@
                     <tr>
                         <td rowspan="16">3</td>
                         <td rowspan="16">GC180168</td>
-                        <td rowspan="16">南山科技园创新中心工程（留仙洞六街坊）方案设计</td>
+                        <td rowspan="16" style="text-align: left"><a href="#">南山科技园创新中心工程（留仙洞六街坊）方案设计</a></td>
                         <td rowspan="16">深圳公司</td>
                         <td rowspan="16">公建部</td>
                         <td rowspan="16">投标</td>
@@ -617,7 +617,7 @@
                     <tr>
                         <td rowspan="21">4</td>
                         <td rowspan="21">GC180067</td>
-                        <td rowspan="21">福田区华富街道福安小区城市更新单元规划</td>
+                        <td rowspan="21" style="text-align: left"><a href="#">福田区华富街道福安小区城市更新单元规划</a></td>
                         <td rowspan="21">深圳公司</td>
                         <td rowspan="21">公建部</td>
                         <td rowspan="21">方案</td>
