--- a/CAPOL_WEB_UI/工程管理平台-项目人员表.html
+++ b/CAPOL_WEB_UI/工程管理平台-项目人员表.html
@@ -277,7 +277,7 @@
                     <tr>
                         <td rowspan="3">1</td>
                         <td rowspan="3">GC180229</td>
-                        <td rowspan="3">万科总部大厦</td>
+                        <td rowspan="3" style="text-align: left"><a href="#">万科总部大厦</a></td>
                         <td rowspan="3">深圳公司</td>
                         <td rowspan="3">公建部</td>
                         <td rowspan="3">投标</td>
