--- a/CAPOL_WEB_UI/工程管理平台-各设计阶段项目一览表.html
+++ b/CAPOL_WEB_UI/工程管理平台-各设计阶段项目一览表.html
@@ -216,8 +216,8 @@
             <div style="height:30px;padding:5px 0px;">
                 <div class="btn-group" role="group" aria-label="..." style="float: left;">
                     <button type="button" class="btn btn-default btn-xs"><span class="icon icon-file-excel"></span> 导出Excel</button>
-                    <button type="button" class="btn btn-default btn-xs"><span class="icon icon-file-pdf"></span> 导出PDF</button>
-                    <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-print"></span> 打印</button>
+                    <!--button type="button" class="btn btn-default btn-xs"><span class="icon icon-file-pdf"></span> 导出PDF</button-->
+                    <!--button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-print"></span> 打印</button-->
                 </div>
                 <span style="position: relative;float: right;font-size: 12px;font-weight: normal;margin: 5px 5px 0px 5px;">日期：2018-07-20</span>
             </div>
